--- a/client/src/components/common/InputThemeRadio/styles.css
+++ b/client/src/components/common/InputThemeRadio/styles.css
@@ -1,12 +1,12 @@
 .theme-radio {
     position: relative;
     display: inline-flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     width: 30%;
     height: 70px;
     border-radius: 0.5rem;
-    margin-right: 0.75rem;
+    /* margin-right: 0.75rem; */
     cursor: pointer;
     flex-grow: 1;
     padding: 1rem;
@@ -27,6 +27,11 @@
 
 .theme-radio.dim .theme-radio_label {
     color: rgb(247, 249, 249);
+}
+
+.theme-radio_label {
+    width: 100%;
+    text-align: center;
 }
 
 .theme-radio.light .theme-radio_label {
@@ -58,11 +63,11 @@
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    padding: 0.2rem;
-    width: 20px;
-    height: 20px;
+    min-width: 20px;
+    min-height: 20px;
+    /* padding: 0.2rem; */
+    /* margin-right: 1rem; */
     border-radius: 50%;
-    margin-right: 1rem;
 }
 
 .theme-radio_input:checked + .theme-radio_selected {
