--- a/client/src/components/layout/MobileSidebar/styles.css
+++ b/client/src/components/layout/MobileSidebar/styles.css
@@ -22,26 +22,24 @@
     margin-bottom: 0.5rem;
 }
 
-.mobile-sidebar .user-info .pfp-container {
-    margin-bottom: 0.5rem;
-}
-
 .mobile-sidebar .user-info .details-container {
     margin-bottom: 0.75rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .mobile-sidebar .pfp-container {
-    width: 40px;
-    height: 40px;
     cursor: pointer;
+    margin-right: 1rem;
+    margin-bottom: 0.5rem;
 }
 
 .mobile-sidebar_content {
     position: fixed;
     top: 0;
     left: 0;
-    width: 70%;
-    max-width: 350px;
+    width: 280px;
+    /* max-width: 350px; */
     height: 100%;
     min-height: 100vh;
     overflow-y: auto;
@@ -70,36 +68,9 @@
     border-radius: 0 !important;
 }
 
-.mobile-sidebar .navbar-link:hover {
+.mobile-sidebar .navbar-link:hover,
+.mobile-sidebar .navbar-link:active {
     border: 0;
-    background: 0;
-}
-
-.mobile-sidebar_content .navbar-account {
-    display: flex;
-    flex-direction: column;
-    width: 100% !important;
-    padding: 0;
-    border-radius: 0;
-    cursor: initial;
-}
-
-.mobile-sidebar_content .navbar-account .account-details,
-.mobile-sidebar_content .navbar-account .float-btn {
-    width: 100%;
-    color: var(--text-primary);
-}
-
-.mobile-sidebar_content .navbar-account .float-btn {
-    padding: 1rem;
-}
-
-.mobile-sidebar_content .navbar-account .float-btn:hover {
-    background-color: var(--nav-item-hover);
-}
-
-.mobile-sidebar_content .navbar-account:hover {
-    border-radius: 0;
     background: 0;
 }
 
@@ -114,12 +85,6 @@
 
 .mobile-sidebar_content .user-info {
     padding: 1rem;
-}
-
-.mobile-sidebar .navbar-account {
-    margin-top: 1.5rem !important;
-    align-self: flex-end;
-    margin-bottom: 0;
 }
 
 .mobile-sidebar .display_name {
