--- a/client/src/components/modals/ReplyModal/styles.css
+++ b/client/src/components/modals/ReplyModal/styles.css
@@ -31,9 +31,9 @@
 .reply-modal .pfp-container {
     position: relative;
     z-index: 1111111;
-    padding-top: 0.3rem;
+    margin-top: 0.3rem;
     margin-right: 0.75rem !important;
-    height: 100% !important;
+    min-width: 40px;
 }
 
 .reply-modal .recipient-tweet > .pfp-container::after {
@@ -46,11 +46,6 @@
     height: 100vh;
     z-index: -11;
     background-color: var(--border-2);
-}
-
-.reply-modal .pfp-container .pfp {
-    width: 40px;
-    height: 40px;
 }
 
 .recipient-tweet {
@@ -97,6 +92,7 @@
 }
 
 .reply-modal .input-container {
+    padding-top: 0.25rem;
     width: 100%;
     display: flex;
     flex-direction: column;
