--- a/client/src/components/ui/TweetForm/styles.css
+++ b/client/src/components/ui/TweetForm/styles.css
@@ -10,14 +10,9 @@
 }
 
 .tweet-form .pfp-container {
-    align-items: flex-start;
-    padding-top: 0.5rem;
-    margin-right: 0.75rem !important;
-}
-
-.tweet-form .pfp-container .pfp {
-    width: 40px;
-    height: 40px;
+    min-width: 40px;
+    margin-top: 0.5rem;
+    margin-right: 1rem;
 }
 
 .tweet-input {
@@ -97,7 +92,8 @@
     margin-right: 0.5rem;
 }
 
-.reply_label:hover {
+.reply_label:hover,
+.reply_label:active {
     background-color: var(--accent-hover);
 }
 
@@ -117,7 +113,8 @@
     margin: 0.5rem 0;
 }
 
-.audience:hover {
+.audience:hover,
+.audience:active {
     background-color: var(--accent-hover);
 }
 
