improve rendering of ui widgets

--- a/client/src/components/widgets/Trending/styles.css
+++ b/client/src/components/widgets/Trending/styles.css
@@ -1,4 +1,5 @@
 .explore-route .widget-item .subheader_container {
     display: flex;
     justify-content: space-between;
+    overflow: visible !important;
 }
